--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,16 @@
 spring.application.name=product_service_15_05_24
-server.port= 8090
-spring.jpa.hibernate.ddl-auto=update
+server.port= 8081
+spring.jpa.hibernate.ddl-auto=validate
+#spring.datasource.url=jdbc:mysql://{PROD_SERVE_DB_URL}:3306/{PROD_SERVE_DB_NAME}
+#spring.datasource.username={PROD_SERVE_DB_USER_NAME}
+#spring.datasource.url=jdbc:mysql://prod-serve-db-250524.ct0ywqaskco4.ap-south-1.rds.amazonaws.com:3306/product_service_may_24
+#spring.datasource.username=product_service_may_24
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/product_service_may_24
 spring.datasource.username=root
 spring.datasource.password=J@singh123#
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
+
+#Redis Config
+#spring.data.redis.port=6739
+#spring.data.redis.host="url"
